--- a/client/src/components/themes/themeComponents/link/link.module.css
+++ b/client/src/components/themes/themeComponents/link/link.module.css
@@ -310,7 +310,7 @@
     width: 100%;
     min-width: unset;
     max-width: 100vw;
-    border-radius: var(--link-border-radius, 8px);
+    /* border-radius: var(--link-border-radius, 8px); */
     opacity: var(--link-container-mobile-opacity, 1);
     filter: var(--link-container-mobile-filter, none);
     animation: var(--link-container-mobile-animation, none);
